--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <h2>ติดต่อเรา</h2>
             <p>หากต้องการข้อมูลเพิ่มเติม สามารถติดต่อเราได้ที่:</p>
             <div class="contact-info">
-                <p><i class="fas fa-envelope"></i> อีเมล: <a href="mailto:info@chaipatour.com">info@chaipatour.com</a></p>
+                <p><i class="fas fa-envelope"></i> อีเมล: <a href="mailto:info@chaipatour.com">rebornn55554@gmail.com</a></p>
                 <p><i class="fas fa-phone"></i> เบอร์โทรศัพท์: <a href="tel:+66123456789">+66 123 456 789</a></p>
             </div>
         </div>
